# zkml

./: .gitignore  Cargo.toml  README.md  compare_files.py  data.msgpack  foo.txt  foo2.txt  hello.msgpack  public_vals
backwards/: README.md  backward.py  conv2d.py
circuits/: last_two_layers.py
examples/mnist/: config.msgpack  data_to_npy.py  inp.msgpack  mnist_model.tflite  model.msgpack  model.tflite
examples/mobilenet/: inp.msgpack  mobilenet.msgpack
examples/nlp/clip/: README.md  config.msgpack  inp.msgpack  proof
examples/nlp/gpt-2/: README.md  config.msgpack  inp.msgpack  proof
examples/train_graph/: input.msgpack  train.msgpack
examples/truncated_mobinet/: model.msgpack  model.tflite
examples/twitter/: config.msgpack  inp1.msgpack  inp2.msgpack  inp3.msgpack  proof1  proof2  proof3  public_vals1  public_vals2  public_vals3
examples/v2_1.0_224_truncated/: model.msgpack  v2_1.0_224_truncated.tflite
python/: converter.py  input_converter.py  training_converter.py
python/onnx_converter/: batch_size_modifier.py  config.msgpack  dataprinter.py  first_transformed_onnx.msgpack  mnist-8.onnx  onnxconverter.py
src/: commitments.rs  gadgets.rs  layers.rs  lib.rs  model.rs  utils.rs
src/commitments/: commit.rs  packer.rs  pit_commit.rs  poseidon.rs  poseidon_commit.rs  poseidon_custom.rs  pow5.rs  primitives.rs
src/commitments/poseidon/: fp.rs  fq.rs  grain.rs  mds.rs  p128pow5t3.rs  test_vectors.rs
src/gadgets/: add_pairs.rs  adder.rs  bias_div_floor_relu6.rs  bias_div_relu6.rs  bias_div_round_relu6.rs  dot_prod.rs  exp.rs  gadget.rs  input_lookup.rs  max.rs  mul_pairs.rs  non_linearity.rs  nonlinear.rs  rsqrt.rs  sqrt_big.rs  square.rs  squared_diff.rs  sub_pairs.rs  update.rs  var_div.rs  var_div_big.rs  var_div_big3.rs
src/gadgets/nonlinear/: exp.rs  logistic.rs  non_linearity.rs  pow.rs  relu.rs  rsqrt.rs  sqrt.rs  tanh.rs
src/layers/: add.rs  arithmetic.rs  averager.rs  avg_pool_2d.rs  batch_mat_mul.rs  conv2d.rs  dag.rs  div.rs  div_fixed.rs  fully_connected.rs  layer.rs  logistic.rs  max_pool_2d.rs  mean.rs  mul.rs  noop.rs  pad.rs  pow.rs  relu.rs  rsqrt.rs  shape.rs  softmax.rs  sqrt.rs  square.rs  squared_diff.rs  tanh.rs  update.rs  updater.rs
src/layers/arithmetic/: add.rs  div_var.rs  mul.rs  sub.rs
src/layers/shape/: broadcast.rs  concatenate.rs  concatenation.rs  flip.rs  gather.rs  mask_neg_inf.rs  pack.rs  pad.rs  permute.rs  reshape.rs  resize_nn.rs  rotate.rs  slice.rs  split.rs  transpose.rs
src/tests/: mod.rs  sqrt.rs  test_circuit.rs
src/utils/: bench_kzg.rs  helpers.rs  loader.rs  proving.rs  proving_ipa.rs  proving_kzg.rs
testing/circuits/: last_two_layers.py
testing/training_data/: inputs.msgpack  labels.msgpack
