[package]
name = "zkml"
version = "0.0.1"
edition = "2021"
description = "Zero-knowledge machine learning"
license = "LICENSE"
homepage = "https://github.com/ddkang/zkml"
repository = "https://github.com/ddkang/zkml-public.git"
readme = "README.md"
exclude = [
  "params",
  "params_kzg",
  "python",
]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
bitvec = "1.0.1"
blake2b_simd = "1"
halo2 = { path="../halo2_sys/halo2" }
halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3", package = "halo2curves" }
halo2_gadgets = { path="../halo2_sys/halo2_gadgets", features = ["circuit-params"] }
halo2_proofs = { path="../halo2_sys/halo2_proofs", features = ["circuit-params"] }
lazy_static = "1.4.0"
ndarray = "0.15.6"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.15.0"
plonkish_backend = { path="../plonkish/plonkish_backend", features=["benchmark"]}
rand = "0.8.5"
rmp-serde = "1.1.1"
rounded-div = "0.1.2"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.85"
wav = "1.0.0"
